refactor(model): 重构数据模型和数据库配置
- 将AccountAddDTO从services/seata-account模块迁移到model模块
- 创建BaseDTO作为基础DTO类并继承到AccountAddDTO
- 添加字段验证注解和实体类关系优化
- 为Order和Product服务添加数据库配置信息
- 增加Feign客户端超时配置时间
- 优化网关路由配置
- 创建CreateOrderDTO和CreateProductDTO数据传输对象
- 添加GenderEnum性别枚举类
- 创建数据库初始化SQL脚本
- 迁移AccountDO到model模块
- 更新Order和Product服务的数据访问层实现
- 统一响应格式为RespVO包装类
- 添加MyBatis-Plus和验证依赖
- 实现商品和订单的创建功能
- 优化服务间调用的DTO转换逻辑